Update Config File
Update config file to ShutUp10++ Settings

--- a/ooshutup10.cfg
+++ b/ooshutup10.cfg
@@ -1,5 +1,5 @@
 ############################################################################
-# Este archivo se creó con O&O ShutUp10++ V1.9.1444
+# Este archivo se creó con O&O ShutUp10++ V2.0.1009
 # y se puede importar a otra computadora. 
 #
 # Descargue la aplicación en https://www.oo-software.com/shutup10
@@ -25,7 +25,7 @@ P002	+	# El intercambio de informes de errores de escritura a mano está deshabi
 P003	+	# Recopilador de inventario deshabilitado (Categoría: Privado)
 P004	+	# Cámara en pantalla de inicio de sesión desactivada (Categoría: Privado)
 P005	+	# Deshabilite y restablezca el ID de publicidad de todo el equipo (Categoría: Privado)
-P006	+	# Deshabilite y restablezca el ID de anuncio (Categoría: Privado)
+P006	+	# Deshabilite y restablezca el ID de anuncio para el usuario actual (Categoría: Privado)
 P008	+	# Transmisión de la información de mecanografía desactivada (Categoría: Privado)
 P026	+	# Anuncios a través de Bluetooth desactivados (Categoría: Privado)
 P027	+	# Deshabilite el programa de mejora de la experiencia del cliente de Windows (Categoría: Privado)
@@ -42,69 +42,69 @@ P015	+	# Acceso al idioma local para navegadores deshabilitados. (Categoría: Pr
 P068	-	# Desactive las sugerencias de texto al escribir en el teclado del software (Categoría: Privado)
 P016	-	# Envío de URLs desde aplicaciones a la Tienda Windows deshabilitada (Categoría: Privado)
 A001	+	# Deshabilitar las grabaciones de la actividad del usuario (Categoría: Historial de actividades)
-A002	+	# Almacenamiento dIsable del historial de actividad de los usuarios (Categoría: Historial de actividades)
+A002	+	# Almacenamiento dIsable del historial de actividad de los usuarios en este dispositivo (Categoría: Historial de actividades)
 A003	+	# Deshabilitar el envío de actividades de usuario a Microsoft (Categoría: Historial de actividades)
 A004	+	# Deshabilite el almacenamiento del historial del portapapeles para equipos completos (Categoría: Historial de actividades)
 A006	+	# Deshabilitar el almacenamiento del historial del portapapeles para los usuarios actuales (Categoría: Historial de actividades)
 A005	+	# Desactivar la transferencia del portapapeles a otros dispositivos a través de la nube (Categoría: Historial de actividades)
-P007	+	# Deshabilite el acceso de la aplicación a la información de la cuenta de usuario (Categoría: Privacidad de la aplicación)
-P036	+	# Deshabilite el acceso de la aplicación a la información de la cuenta de usuario (Categoría: Privacidad de la aplicación)
+P007	+	# Deshabilite el acceso de la aplicación a la información de la cuenta de usuario en este dispositivo (Categoría: Privacidad de la aplicación)
+P036	+	# Deshabilite el acceso de la aplicación a la información de la cuenta de usuario para el usuario actual (Categoría: Privacidad de la aplicación)
 P025	+	# El seguimiento de Windows de la aplicación se inicia deshabilitado (Categoría: Privacidad de la aplicación)
 P033	+	# Deshabilitar el acceso de la aplicación a la información de diagnóstico del dispositivo (Categoría: Privacidad de la aplicación)
-P023	+	# Deshabilite el acceso de la aplicación a la información de diagnóstico (Categoría: Privacidad de la aplicación)
-P056	+	# Deshabilitar el acceso de la aplicación a la ubicación del dispositivo (Categoría: Privacidad de la aplicación)
-P057	+	# Deshabilite el acceso de la aplicación a la ubicación del dispositivo (Categoría: Privacidad de la aplicación)
-P012	-	# Deshabilitar el acceso de la aplicación a la cámara (Categoría: Privacidad de la aplicación)
+P023	+	# Deshabilite el acceso de la aplicación a la información de diagnóstico para el usuario actual (Categoría: Privacidad de la aplicación)
+P056	+	# Deshabilitar el acceso de la aplicación a la ubicación del dispositivo en este dispositivo (Categoría: Privacidad de la aplicación)
+P057	+	# Deshabilite el acceso de la aplicación a la ubicación del dispositivo para el usuario actual (Categoría: Privacidad de la aplicación)
+P012	-	# Deshabilitar el acceso de la aplicación a la cámara en este dispositivo (Categoría: Privacidad de la aplicación)
 P034	-	# Acceso de la aplicación a la cámara desactivada (Categoría: Privacidad de la aplicación)
-P013	-	# Deshabilitar el acceso de la aplicación al micrófono (Categoría: Privacidad de la aplicación)
+P013	-	# Deshabilitar el acceso de la aplicación al micrófono en este dispositivo (Categoría: Privacidad de la aplicación)
 P035	-	# Acceso a la aplicación de micrófono desactivado (Categoría: Privacidad de la aplicación)
-P062	+	# Deshabilite el acceso a la aplicación para usar la activación por voz (Categoría: Privacidad de la aplicación)
-P063	-	# Deshabilite el acceso a la aplicación para usar la activación por voz cuando el dispositivo está bloqueado (Categoría: Privacidad de la aplicación)
+P062	+	# Deshabilite el acceso a la aplicación para usar la activación por voz para el usuario actual (Categoría: Privacidad de la aplicación)
+P063	-	# Deshabilite el acceso a la aplicación para usar la activación por voz cuando el dispositivo está bloqueado para el usuario actual (Categoría: Privacidad de la aplicación)
 P081	+	# Deshabilitar la aplicación predeterminada para presionar el botón de los auriculares (Categoría: Privacidad de la aplicación)
-P047	-	# Deshabilitar el acceso de la aplicación a las notificaciones (Categoría: Privacidad de la aplicación)
+P047	-	# Deshabilitar el acceso de la aplicación a las notificaciones en este dispositivo (Categoría: Privacidad de la aplicación)
 P019	-	# Acceso a la aplicación de notificaciones deshabilitado (Categoría: Privacidad de la aplicación)
-P048	-	# Deshabilitar el acceso de la aplicación al movimiento (Categoría: Privacidad de la aplicación)
-P049	-	# Deshabilitar el acceso de la aplicación a los movimientos (Categoría: Privacidad de la aplicación)
-P020	+	# Deshabilitar el acceso de la aplicación a los contactos (Categoría: Privacidad de la aplicación)
-P037	-	# Deshabilite el acceso de la aplicación a los contactos (Categoría: Privacidad de la aplicación)
-P011	+	# Deshabilitar el acceso de la aplicación al calendario (Categoría: Privacidad de la aplicación)
-P038	-	# Deshabilite el acceso de la aplicación al calendario (Categoría: Privacidad de la aplicación)
-P050	+	# Deshabilitar el acceso de la aplicación a las llamadas telefónicas (Categoría: Privacidad de la aplicación)
-P051	-	# Deshabilite el acceso de la aplicación a las llamadas telefónicas (Categoría: Privacidad de la aplicación)
-P018	+	# Deshabilitar el acceso a la aplicación para el historial de llamadas (Categoría: Privacidad de la aplicación)
-P039	-	# Deshabilite el acceso a la aplicación para el historial de llamadas (Categoría: Privacidad de la aplicación)
-P021	-	# Deshabilitar el acceso de la aplicación al correo electrónico (Categoría: Privacidad de la aplicación)
+P048	-	# Deshabilitar el acceso de la aplicación al movimiento en este dispositivo (Categoría: Privacidad de la aplicación)
+P049	-	# Deshabilitar el acceso de la aplicación a los movimientos para el usuario actual (Categoría: Privacidad de la aplicación)
+P020	+	# Deshabilitar el acceso de la aplicación a los contactos en este dispositivo (Categoría: Privacidad de la aplicación)
+P037	-	# Deshabilite el acceso de la aplicación a los contactos para el usuario actual (Categoría: Privacidad de la aplicación)
+P011	+	# Deshabilitar el acceso de la aplicación al calendario en este dispositivo (Categoría: Privacidad de la aplicación)
+P038	-	# Deshabilite el acceso de la aplicación al calendario para el usuario actual (Categoría: Privacidad de la aplicación)
+P050	+	# Deshabilitar el acceso de la aplicación a las llamadas telefónicas en este dispositivo (Categoría: Privacidad de la aplicación)
+P051	-	# Deshabilite el acceso de la aplicación a las llamadas telefónicas para el usuario actual (Categoría: Privacidad de la aplicación)
+P018	+	# Deshabilitar el acceso a la aplicación para el historial de llamadas en este dispositivo (Categoría: Privacidad de la aplicación)
+P039	-	# Deshabilite el acceso a la aplicación para el historial de llamadas para el usuario actual (Categoría: Privacidad de la aplicación)
+P021	-	# Deshabilitar el acceso de la aplicación al correo electrónico en este dispositivo (Categoría: Privacidad de la aplicación)
 P040	-	# Acceso a la aplicación de correo electrónico deshabilitado (Categoría: Privacidad de la aplicación)
-P022	+	# Deshabilitar el acceso de la aplicación a las tareas (Categoría: Privacidad de la aplicación)
-P041	-	# Deshabilite el acceso de la aplicación a las tareas (Categoría: Privacidad de la aplicación)
-P014	+	# Deshabilitar el acceso de la aplicación a los mensajes (Categoría: Privacidad de la aplicación)
-P042	-	# Deshabilite el acceso de la aplicación a los mensajes (Categoría: Privacidad de la aplicación)
-P052	+	# Deshabilitar el acceso de la aplicación a las radios (Categoría: Privacidad de la aplicación)
-P053	+	# Deshabilite el acceso de la aplicación a las radios (Categoría: Privacidad de la aplicación)
-P054	-	# Deshabilitar el acceso de aplicaciones a dispositivos no emparejados (Categoría: Privacidad de la aplicación)
-P055	+	# Deshabilitar el acceso de aplicaciones a dispositivos no emparejados (Categoría: Privacidad de la aplicación)
-P029	-	# Deshabilitar el acceso de la aplicación a los documentos (Categoría: Privacidad de la aplicación)
-P043	-	# Deshabilite el acceso de la aplicación a los documentos (Categoría: Privacidad de la aplicación)
-P030	-	# Deshabilitar el acceso de la aplicación a las imágenes (Categoría: Privacidad de la aplicación)
-P044	-	# Deshabilite el acceso de la aplicación a las imágenes (Categoría: Privacidad de la aplicación)
-P031	-	# Deshabilitar el acceso de la aplicación a los vídeos (Categoría: Privacidad de la aplicación)
-P045	-	# Deshabilitar el acceso de la aplicación a los vídeos (Categoría: Privacidad de la aplicación)
-P032	-	# Deshabilite el acceso de la aplicación al sistema de archivos (Categoría: Privacidad de la aplicación)
-P046	-	# Deshabilite el acceso de la aplicación al sistema de archivos (Categoría: Privacidad de la aplicación)
-P058	-	# Deshabilitar el acceso de aplicaciones a equipos inalámbricos (Categoría: Privacidad de la aplicación)
-P059	-	# Deshabilitar el acceso de la aplicación a la tecnología inalámbrica (Categoría: Privacidad de la aplicación)
-P060	+	# Deshabilitar el acceso de la aplicación al seguimiento ocular (Categoría: Privacidad de la aplicación)
-P061	-	# Deshabilite el acceso de la aplicación al seguimiento ocular (Categoría: Privacidad de la aplicación)
-P071	+	# Deshabilite la capacidad de las aplicaciones para tomar capturas de pantalla (Categoría: Privacidad de la aplicación)
-P072	-	# Deshabilitar la capacidad de las aplicaciones para tomar capturas de pantalla (Categoría: Privacidad de la aplicación)
-P073	-	# Deshabilitar la capacidad de las aplicaciones de escritorio para tomar capturas de pantalla (Categoría: Privacidad de la aplicación)
-P074	+	# Deshabilite la capacidad de las aplicaciones para tomar capturas de pantalla sin fronteras (Categoría: Privacidad de la aplicación)
-P075	-	# Deshabilitar la capacidad de las aplicaciones para tomar capturas de pantalla sin bordes (Categoría: Privacidad de la aplicación)
-P076	-	# Deshabilitar la capacidad de las aplicaciones de escritorio para tomar capturas de pantalla sin márgenes (Categoría: Privacidad de la aplicación)
-P077	-	# Deshabilitar el acceso de aplicaciones a las bibliotecas de música (Categoría: Privacidad de la aplicación)
-P078	-	# Deshabilitar el acceso de la aplicación a las bibliotecas de música (Categoría: Privacidad de la aplicación)
-P079	-	# Deshabilitar el acceso de la aplicación a la carpeta de descargas (Categoría: Privacidad de la aplicación)
-P080	-	# Deshabilitar el acceso de la aplicación a la carpeta de descargas (Categoría: Privacidad de la aplicación)
+P022	+	# Deshabilitar el acceso de la aplicación a las tareas en este dispositivo (Categoría: Privacidad de la aplicación)
+P041	-	# Deshabilite el acceso de la aplicación a las tareas para el usuario actual (Categoría: Privacidad de la aplicación)
+P014	+	# Deshabilitar el acceso de la aplicación a los mensajes en este dispositivo (Categoría: Privacidad de la aplicación)
+P042	-	# Deshabilite el acceso de la aplicación a los mensajes para el usuario actual (Categoría: Privacidad de la aplicación)
+P052	+	# Deshabilitar el acceso de la aplicación a las radios en este dispositivo (Categoría: Privacidad de la aplicación)
+P053	+	# Deshabilite el acceso de la aplicación a las radios para el usuario actual (Categoría: Privacidad de la aplicación)
+P054	-	# Deshabilitar el acceso de aplicaciones a dispositivos no emparejados en este dispositivo (Categoría: Privacidad de la aplicación)
+P055	+	# Deshabilitar el acceso de aplicaciones a dispositivos no emparejados para el usuario actual (Categoría: Privacidad de la aplicación)
+P029	-	# Deshabilitar el acceso de la aplicación a los documentos en este dispositivo (Categoría: Privacidad de la aplicación)
+P043	-	# Deshabilite el acceso de la aplicación a los documentos para el usuario actual (Categoría: Privacidad de la aplicación)
+P030	-	# Deshabilitar el acceso de la aplicación a las imágenes en este dispositivo (Categoría: Privacidad de la aplicación)
+P044	-	# Deshabilite el acceso de la aplicación a las imágenes para el usuario actual (Categoría: Privacidad de la aplicación)
+P031	-	# Deshabilitar el acceso de la aplicación a los vídeos en este dispositivo (Categoría: Privacidad de la aplicación)
+P045	-	# Deshabilitar el acceso de la aplicación a los vídeos para el usuario actual (Categoría: Privacidad de la aplicación)
+P032	-	# Deshabilite el acceso de la aplicación al sistema de archivos en este dispositivo (Categoría: Privacidad de la aplicación)
+P046	-	# Deshabilite el acceso de la aplicación al sistema de archivos para el usuario actual (Categoría: Privacidad de la aplicación)
+P058	-	# Deshabilitar el acceso de aplicaciones a equipos inalámbricos en este dispositivo (Categoría: Privacidad de la aplicación)
+P059	-	# Deshabilitar el acceso de la aplicación a la tecnología inalámbrica para el usuario actual (Categoría: Privacidad de la aplicación)
+P060	+	# Deshabilitar el acceso de la aplicación al seguimiento ocular en este dispositivo (Categoría: Privacidad de la aplicación)
+P061	-	# Deshabilite el acceso de la aplicación al seguimiento ocular para el usuario actual (Categoría: Privacidad de la aplicación)
+P071	+	# Deshabilite la capacidad de las aplicaciones para tomar capturas de pantalla en este dispositivo (Categoría: Privacidad de la aplicación)
+P072	-	# Deshabilitar la capacidad de las aplicaciones para tomar capturas de pantalla para el usuario actual (Categoría: Privacidad de la aplicación)
+P073	-	# Deshabilitar la capacidad de las aplicaciones de escritorio para tomar capturas de pantalla para el usuario actual (Categoría: Privacidad de la aplicación)
+P074	+	# Deshabilite la capacidad de las aplicaciones para tomar capturas de pantalla sin fronteras en este dispositivo (Categoría: Privacidad de la aplicación)
+P075	-	# Deshabilitar la capacidad de las aplicaciones para tomar capturas de pantalla sin bordes para el usuario actual (Categoría: Privacidad de la aplicación)
+P076	-	# Deshabilitar la capacidad de las aplicaciones de escritorio para tomar capturas de pantalla sin márgenes para el usuario actual (Categoría: Privacidad de la aplicación)
+P077	-	# Deshabilitar el acceso de aplicaciones a las bibliotecas de música en este dispositivo (Categoría: Privacidad de la aplicación)
+P078	-	# Deshabilitar el acceso de la aplicación a las bibliotecas de música para el usuario actual (Categoría: Privacidad de la aplicación)
+P079	-	# Deshabilitar el acceso de la aplicación a la carpeta de descargas en este dispositivo (Categoría: Privacidad de la aplicación)
+P080	-	# Deshabilitar el acceso de la aplicación a la carpeta de descargas para el usuario actual (Categoría: Privacidad de la aplicación)
 P024	-	# Prohibir que las aplicaciones se ejecuten en segundo plano (Categoría: Privacidad de la aplicación)
 S001	+	# Botón para revelar la contraseña desactivado (Categoría: Seguridad)
 S002	+	# Grabador de pasos de usuario deshabilitado (Categoría: Seguridad)
@@ -191,8 +191,8 @@ C205	+	# Desactivar el Creador de imágenes en Microsoft Paint (Categoría: IA d
 C102	+	# Desactivar el botón Copilot de la barra de tareas (Categoría: IA de Windows)
 C103	+	# Deshabilitar la recuperación de Windows Copilot+ (Categoría: IA de Windows)
 C203	+	# Deshabilitar la recuperación de Windows Copilot+ (Categoría: IA de Windows)
-C206	-	# Desactivar Cocreator en Microsoft Paint (Categoría: IA de Windows)
-C207	-	# Deshabilitar el relleno de imagen impulsado por IA en Microsoft Paint (Categoría: IA de Windows)
+C206	+	# Desactivar Cocreator en Microsoft Paint (Categoría: IA de Windows)
+C207	+	# Deshabilitar el relleno de imagen impulsado por IA en Microsoft Paint (Categoría: IA de Windows)
 L001	+	# Funcionalidad para localizar el sistema deshabilitado (Categoría: Servicios de localización)
 L003	+	# Funcionalidad de scripting para localizar el sistema deshabilitado (Categoría: Servicios de localización)
 L004	-	# Sensores para localizar el sistema y su orientación deshabilitados (Categoría: Servicios de localización)
@@ -231,18 +231,18 @@ M003	+	# Extensión de búsqueda de Windows con Bing desactivado (Categoría: Bu
 M015	+	# Desactivar icono de personas en la barra de tareas (Categoría: Barra de tareas)
 M016	+	# ¡Desactiva el cuadro de búsqueda en la barra de tareas! (Categoría: Barra de tareas)
 M017	+	# Deshabilite "Reunirse ahora" en la barra de tareas de este dispositivo (Categoría: Barra de tareas)
-M018	+	# Deshabilitar "Reunirse ahora" en la barra de tareas (Categoría: Barra de tareas)
+M018	+	# Deshabilitar "Reunirse ahora" en la barra de tareas para el usuario actual (Categoría: Barra de tareas)
 M019	+	# Deshabilitar noticias e intereses en la barra de tareas (Categoría: Barra de tareas)
-M021	+	# Deshabilitar widgets en el Explorador de Windows (Categoría: Barra de tareas)
-M022	+	# Deshabilitar recordatorios de comentarios (Categoría: Diverso)
-M001	+	# Deshabilitar recordatorios de comentarios (Categoría: Diverso)
+M021	-	# Deshabilitar widgets en el Explorador de Windows (Categoría: Barra de tareas)
+M022	+	# Deshabilitar recordatorios de comentarios en este dispositivo (Categoría: Diverso)
+M001	+	# Deshabilitar recordatorios de comentarios para el usuario actual (Categoría: Diverso)
 M004	+	# Deshabilitar la instalación automática de aplicaciones recomendadas de Windows Store (Categoría: Diverso)
 M005	+	# Deshabilite sugerencias, trucos y sugerencias mientras usa Windows (Categoría: Diverso)
 M024	+	# Desactivar el diagnóstico del Reproductor de Windows Media (Categoría: Diverso)
-M026	+	# Deshabilitar las conexiones de asistencia remota a este equipo (Categoría: Diverso)
-M027	+	# Deshabilitar las conexiones remotas a este equipo (Categoría: Diverso)
-M028	+	# Desactive el icono del escritorio para obtener información sobre "Windows Spotlight" (Categoría: Diverso)
 M012	-	# Desactivar la activación en línea del servicio de administración de claves (Categoría: Diverso)
 M013	-	# Deshabilitar la descarga automática y la actualización de los datos del mapa (Categoría: Diverso)
 M014	-	# Deshabilite el tráfico de red no solicitado en la página de configuración de mapas sin conexión (Categoría: Diverso)
+M026	+	# Deshabilitar las conexiones de asistencia remota a este equipo (Categoría: Diverso)
+M027	+	# Deshabilitar las conexiones remotas a este equipo (Categoría: Diverso)
+M028	+	# Desactive el icono del escritorio para obtener información sobre "Windows Spotlight" (Categoría: Diverso)
 N001	-	# Indicador de estado de conectividad de red desactivado (Categoría: Diverso)
